[gd_scene load_steps=3 format=3 uid="uid://bgvp0e5gy0512"]

[ext_resource type="Script" path="res://Scenes/Editor.gd" id="1_ofp3n"]
[ext_resource type="Texture2D" uid="uid://bkghs5av377cf" path="res://Assets/brainlet.png" id="2_51osx"]

[node name="Editor" type="Node2D"]
script = ExtResource("1_ofp3n")

[node name="Brainlet" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_51osx")

[node name="SongName" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 80
text = "Song Name"

[node name="BPM" type="Label" parent="."]
offset_left = 1427.0
offset_top = 234.0
offset_right = 1868.0
offset_bottom = 347.0
theme_override_font_sizes/font_size = 80
text = "BPM: -"
horizontal_alignment = 2

[node name="Browse" type="Button" parent="."]
offset_left = 1585.0
offset_top = 16.0
offset_right = 1880.0
offset_bottom = 134.0
theme_override_font_sizes/font_size = 80
text = "Browse"

[node name="Beat" type="Button" parent="."]
offset_left = 1588.0
offset_top = 362.0
offset_right = 1883.0
offset_bottom = 480.0
theme_override_font_sizes/font_size = 80
text = "Beat"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File or Directory"
position = Vector2i(710, 310)
size = Vector2i(836, 442)
min_size = Vector2i(500, 300)
ok_button_text = "Open"
file_mode = 3

[connection signal="pressed" from="Browse" to="." method="_showFialog"]
[connection signal="pressed" from="Beat" to="." method="_beatHit"]
[connection signal="dir_selected" from="FileDialog" to="." method="_dirSelected"]
[connection signal="file_selected" from="FileDialog" to="." method="_fileSelected"]
